--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,6 +1,11 @@
 <html>
-    <body>
-        <span id="root"></span>
-        <script src="index.tsx"></script>
-    </body>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+</head>
+<body>
+<span id="root"></span>
+<script src="index.tsx"></script>
+</body>
 </html>
